tests/transpiler/x/go/membership.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-19 12:25:24 GMT+7
package main

import "fmt"

func main() {
    nums := []int{1, 2, 3}
    fmt.Println((2 in nums))
    fmt.Println((4 in nums))
}
